--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
+              "src/assets"
 
-                "glob": "**/*",
-                "input": "public"
-              }
             ],
             "styles": [
               "src/styles.scss"
@@ -86,10 +83,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets"
+
             ],
             "styles": [
               "src/styles.scss"
